--- a/package.json
+++ b/package.json
@@ -1,41 +1,36 @@
 {
   "name": "the-black-cat-website",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Website for online card multiplayer game The Black Cat",
   "main": "./build/production/server.js",
   "scripts": {
     "pack-dev": "webpack",
     "pack-production": "webpack --env.NODE_ENV=\"production\"",
-    "dev": "npm run pack-dev && node --harmony ./build/development/server.js",
-    "production": "npm run pack-production && node --harmony ./build/production/server.js"
+    "dev": "npm run pack-dev && node ./build/development/server.js",
+    "production": "npm run pack-production && node ./build/production/server.js",
+    "lint": "tslint ./src/**/*.*"
   },
   "author": "Erik Cupal",
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "connected-react-router": "^4.0.0",
-    "csstips": "0.2.0",
-    "csx": "^8.2.1",
     "koa": "^2.2.0",
-    "koa-2-webpack": "^0.1.1",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.1.1",
     "koa-send": "^3.3.0",
     "koa-static": "^3.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-intl": "^2.2.3",
     "react-markdown": "^2.4.6",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.0",
-    "redux-observable": "^0.14.1",
-    "reselect": "^3.0.0",
-    "rxjs": "^5.3.0",
-    "stylish-components": "^0.1.1-beta-7",
-    "typestyle": "^1.3.1"
+    "serialize-javascript": "^1.3.0",
+    "styled-components": "^1.4.4"
   },
   "devDependencies": {
     "@types/koa": "^2.0.39",
@@ -47,10 +42,12 @@
     "@types/react-dom": "^0.14.23",
     "@types/react-helmet": "^5.0.0",
     "@types/react-hot-loader": "^3.0.1",
+    "@types/react-intl": "^2.2.5",
     "@types/react-redux": "^4.4.38",
     "@types/react-router": "^4.0.3",
     "@types/react-router-dom": "^4.0.3",
     "@types/react-router-redux": "^4.0.44",
+    "@types/serialize-javascript": "^1.3.1",
     "@types/webpack-dev-middleware": "^1.9.1",
     "@types/webpack-hot-middleware": "^2.15.0",
     "babel-core": "^6.24.0",
@@ -66,7 +63,9 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "imports-loader": "^0.7.1",
+    "koa-2-webpack": "^0.1.1",    
     "react-hot-loader": "^3.0.0-beta.6",
+    "redux-devtools-extension": "^2.13.0",    
     "ts-loader": "^2.0.3",
     "tslint": "^5.0.0",
     "typescript": "^2.3.0-dev.20170403",
