--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "connected-react-router": "^4.0.0",
+    "glamor": "^2.20.24",
+    "glamorous": "^3.11.1",
     "koa": "^2.2.0",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.1.1",
@@ -37,8 +39,7 @@
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
-    "serialize-javascript": "^1.3.0",
-    "styled-components": "^1.4.4"
+    "serialize-javascript": "^1.3.0"
   },
   "devDependencies": {
     "@types/koa": "^2.0.39",
