--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "babel-preset-latest": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "compression-webpack-plugin": "^0.4.0",
     "imports-loader": "^0.7.1",
     "koa-2-webpack": "^0.1.1",
     "react-hot-loader": "^3.0.0-beta.6",
